<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_travel"
        android:icon="@drawable/map_icon"
        app:labelVisibilityMode="unlabeled"
        android:title="@string/title_travel" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/heart_icon"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_explore"
        android:title="@string/title_explore" />

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/sent_icon"
        android:title="@string/title_message" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/title_profile" />


</menu>
